--- a/public/less/light.less
+++ b/public/less/light.less
@@ -112,6 +112,57 @@ input, .composer, .input {
     }
 }
 
+.button {
+    color: hsla(0, 0%, 100%, 0.9);
+    font-weight: bold;
+    
+    position: relative;
+
+    padding: 5px 16px 6px 16px;
+
+    background-image: -webkit-linear-gradient(bottom, rgb(165,36,34) 00%, rgb(202,41,41) 100%);
+    
+    border: 1px solid #911d1d;
+    -webkit-border-radius: 5px;
+    
+    -webkit-box-shadow: inset 0 0 4px hsla(0, 0%, 100%, 0.6), 0 1px 1px hsl(0, 0%, 50%);
+    
+    text-shadow: 0 -1px 0 hsla(0, 0%, 0%, 0.35);
+    
+    -webkit-user-select: none;
+    cursor: pointer;
+
+    &.large {
+        font-weight: bold;
+        font-size: 1.4em;
+        padding: 5px 18px 8px 18px;        
+        -webkit-border-radius: 6px;
+    }
+    
+    &.small {
+        font-size: 0.9em;
+        font-weight: lighter;
+        padding: 4px 12px 5px 12px;        
+        -webkit-border-radius: 4px;
+    }
+    
+    &.mini {
+        font-size: 0.8em;
+        font-weight: lighter;
+        padding: 3px 8px 4px 8px;
+        -webkit-border-radius: 3px;
+    }
+    
+    &:hover {
+        -webkit-box-shadow: inset 0 0 4px hsla(0, 0%, 100%, 0.9), 0 1px 1px hsl(0, 0%, 50%);
+    }
+    
+    &:active {
+        top: 1px;
+        -webkit-box-shadow: inset 0 0 4px hsla(0, 0%, 100%, 0.9);    
+    }
+}
+
 nav {
     position: fixed;
     
