Layout fixes, added new sources

--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -48,6 +48,10 @@ ul, ol, li {
     background-color: #000000;
 }
 
+.header {
+    background: 96px 0px url('/images/logo-telegraaf.png') no-repeat;
+}
+
 .load-more {
     padding: 18px; 
     text-align: center;
@@ -158,4 +162,3 @@ div.section {
         }
     }
 }
-
