Fixed font on windows

--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -25,7 +25,7 @@
 @application-height: 300px;
 
 body {
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica Neue", "Arial";
 
     background-color: #000000;
     
