Switched to telegraaf content

--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -1,7 +1,9 @@
 @import "library/normalize.less";
 
 @header-font-size: 16px;
+@header-font-size-small: 14px;
 @body-text-font-size: 14px;
+@body-text-font-size-small: 13px;
 @body-text-font-family: "Georgia";
 @body-text-line-height: 20px;
 @body-text-color: hsl(0, 0%, 12%);
