--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -152,11 +152,11 @@ div.section {
         }
     }
     
-        .right .button {
+        .button.right {
             float: right;
         }
         
-        .left .button {
+        .button.left {
             float: left;
         }    
 
@@ -178,9 +178,8 @@ div.section {
     }
     
     .content {
-        height: 420px;
-
-        -webkit-touch-callout: none;        
+        -webkit-touch-callout: none;
+        overflow: hidden;
 
         &.hidden {
             visibility: hidden;
