--- a/public/less/compiled.css
+++ b/public/less/compiled.css
@@ -650,6 +650,9 @@ article.expanded > section p {
     The pull to refresh
 
 ***/
+div.article .scrollover-wrapper.has-header {
+  top: 43px;
+}
 .pull-to-refresh {
   position: absolute;
   top: 0;
