--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -22,6 +22,7 @@
 @link-color: #3280C9;
 
 @import "library/news.less";
+@import "library/grid.less";
 @import "library/pull-to-refresh.less";
 
 @application-height: 300px;
