--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -2,11 +2,14 @@
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+@header-font-family: "Arial";
 @header-font-size: 16px;
 @header-font-size-small: 14px;
-@body-text-font-size: 14px;
-@body-text-font-size-small: 13px;
-@body-text-font-family: "Georgia";
+@header-font-size-large: 18px;
+@header-text-color: #333;
+@body-text-font-size: 13px;
+@body-text-font-size-small: 11px;
+@body-text-font-family: "Arial";
 @body-text-line-height: 20px;
 @body-text-color: hsl(0, 0%, 12%);
 
@@ -19,6 +22,8 @@
 @medium-gray-color: hsl(0, 0%, 34%);
 @dark-gray-color: hsl(0, 0%, 12%);
 @black-color: hsl(0, 0%, 0%);
+
+@paper-black-color: hsl(0, 0%, 20%);
 
 @divider-color: hsl(0, 0%, 88%);
 @link-color: #3280C9;
