--- a/public/less/mobile.less
+++ b/public/less/mobile.less
@@ -1,4 +1,5 @@
 @import "library/normalize.less";
+@import "library/ui.less";
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
