--- a/public/less/compiled.css
+++ b/public/less/compiled.css
@@ -442,6 +442,20 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.ui-image-view {
+  width: 100%;
+  height: 100%;
+  background-color: #333333;
+  padding: 60px 0;
+}
+.ui-image-view img {
+  margin: 0 auto;
+  max-width: 90%;
+  max-height: 90%;
+  display: block;
+  vertical-align: middle;
+  -webkit-box-shadow: 0px 0px 20px #000000;
+}
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
